--- a/index.html
+++ b/index.html
@@ -2,63 +2,64 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Blessing's Personal site</title>
+    <title>Innocent Blessing</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gentium+Plus&family=Great+Vibes&family=Merriweather:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
-    <table cellspacing=20>
-      <tr>
-        <td><img src="C:\Users\USER\Desktop\web development\Html- Personal Site\images (2).jpg" alt="profile pic"></td>
-        <td>  <h1>Innocent Blessing</h1>
-          <p><em>Front-end web developer and <strong><a href="https://writesonic.com/">Writer</a></strong></em></p><p>I am a student of University of Nigeria. An undergraduate of law, I am well learned in Html, css and javascript.
-          i am also a writer and i love writing inspirational stories, Writing helps me connect with my inner self.</p></td>
-      </tr>
-    </table>
+    <div class="Top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud picture">
+      <h1>I am Blessing.</h1>
+      <h2><p>a <span class="pro">pro</span>grammer</p></h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud picture">
+      <img src="images/mountain.png" alt="mountain-img">
+
+    </div>
+    <div class="middle-container">
+      <img  class="img" src="C:\Users\USER\Desktop\web development\CSS- My site\images\istockphoto-981750034-612x612.jpg" alt="profile-img">
+      <h2>Hello.</h2>
+      <p class="intro">I am a web designer and front end web developer experienced in html, css and java script.</p>
+    </div>
     <hr>
-    <h3>Educational Background.</h3>
-    <ul>
-      <li><a href="https://l.facebook.com/l.php?u=http%3A%2F%2Fwww.edgelaneschool.com%2F&h=AT1KvV7CGCec5AY7ivpJluXUBaMWPsqmGfycUOy0Y0M5D4qV7VB63UQvMlQTTQ_o35s9dnc2d1tyYV19hC0kydEPyLdDCgeHWjY_dwVmpBEq7JwCRW-HeGOmVzpxFt4TCQ4IDqwpOf7TjfrCugOQng">Edgelane Nursery and primary school.</a></li>
-      <li>Sma college.</li>
-      <li><a href="https://www.unn.edu.ng/">University of Nigeria, Enugu.</a></li>
-    </ul>
-    <hr>
-    <h3>Work experience</h3>
-      <table cellspacong="10">
-        <thead>
-          <tr>
-            <th>Dates.</th>
-            <th>Work places.</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>2019-2020</td>
-            <td>Nin enrollment officer.</td>
-          </tr>
-          <tr>
-            <td>2020-2021</td>
-            <td>Html and java script adviser</td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+      <img class="design" src="C:\Users\USER\Desktop\web development\CSS- My site\images\download (18).jpg" alt="">
+      <h3>Design and development.</h3>
+       <p>I have always love designing and developing websites. I started learning how to code at the age of 15, and for the past 5 years, i
+        have developed my skills and learnt how to maximize various programming languages that will help to beautify my websites.
+       </p>
+       </div>
+        <div class="skill-row">
+        <img class="writing" src="images/2593510.png" alt="writing picture">
+        <h3>Blog writing and content writing</h3>
+        <p>I love writing, both fictional and non fictional writeups. writing has always been something i am passionate about. I
+          write articles for blogs and also create contents for businesses and social media post.
+        </p>
+        </div>
+      </div>
       <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10">
-           <tr>
-             <td>Html5</td>
-             <td>✔✔✔✔</td>
-           </tr>
-           <tr>
-             <td>CSS</td>
-             <td>✔✔✔</td>
-           </tr>
-           <tr>
-             <td>Java script</td>
-             <td>✔✔</td>
-           </tr>
-    </table>
-     <hr>
-    <a href="Hobbies.html">My hobbies</a>
-    <p><a href="contact.html">Contact me</a></P>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3> If you are intrested in what i do.</h3>
+        <p class="exit">Would you like to contact me or get to know more about my skills and expertise, get in touch with me.</p>
+        <a class="btn" href="mailto:bi817307@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copy-wright">© Blessing Innocent.</p>
+    </div>
+
+
+
+
 
   </body>
 </html>
